C_Programing/Unit2_Lesson3_C_basics/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:03:53 **** Rebuild of configuration Debug for project HW2_EX4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\main.c: In function 'main':
..\main.c:22:12: warning: format '%d' expects argument of type 'int', but argument 2 has type 'double' [-Wformat=]
   printf("%d is negative ", number);
            ^
..\main.c:26:12: warning: format '%d' expects argument of type 'int', but argument 2 has type 'double' [-Wformat=]
   printf("%d is positive ", number);
            ^
gcc -o HW2_EX4.exe main.o 
Info: Nothing to build for HW2_EX4
23:04:20 **** Incremental Build of configuration Debug for project HW2_EX4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX4.exe main.o 
Info: Nothing to build for HW2_EX4
Info: Nothing to build for HW2_EX4
Info: Nothing to build for HW2_EX4
23:05:21 **** Incremental Build of configuration Debug for project HW2_EX4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX4.exe main.o 
Info: Nothing to build for HW2_EX4
Info: Nothing to build for HW2_EX4
Info: Nothing to build for HW2_EX4
23:19:35 **** Rebuild of configuration Debug for project HW2_EX5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\main.c: In function 'main':
..\main.c:25:12: warning: format '%c' expects a matching 'int' argument [-Wformat=]
   printf("%c is an alphabet");
            ^
..\main.c:28:12: warning: format '%c' expects a matching 'int' argument [-Wformat=]
   printf("%c is not an alphabet");
            ^
gcc -o HW2_EX5.exe main.o 
Info: Nothing to build for HW2_EX5
23:20:08 **** Incremental Build of configuration Debug for project HW2_EX5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX5.exe main.o 
Info: Nothing to build for HW2_EX5
Info: Nothing to build for HW2_EX5
Info: Nothing to build for HW2_EX5
23:20:31 **** Incremental Build of configuration Debug for project HW2_EX5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX5.exe main.o 
23:36:50 **** Rebuild of configuration Debug for project HW2_EX6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\main.c: In function 'main':
..\main.c:23:2: error: expected ';' before '}' token
  }
  ^
23:36:57 **** Incremental Build of configuration Debug for project HW2_EX6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX6.exe main.o 
Info: Nothing to build for HW2_EX6
23:37:32 **** Incremental Build of configuration Debug for project HW2_EX6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX6.exe main.o 
Info: Nothing to build for HW2_EX6
23:51:25 **** Rebuild of configuration Debug for project HW2_EX7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\main.c: In function 'main':
..\main.c:27:30: error: 'sum' undeclared (first use in this function)
   printf("Factorial =  %d ", sum);
                              ^~~
..\main.c:27:30: note: each undeclared identifier is reported only once for each function it appears in
23:51:42 **** Incremental Build of configuration Debug for project HW2_EX7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX7.exe main.o 
Info: Nothing to build for HW2_EX7
Info: Nothing to build for HW2_EX7
Info: Nothing to build for HW2_EX7
23:52:34 **** Incremental Build of configuration Debug for project HW2_EX7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX7.exe main.o 
Info: Nothing to build for HW2_EX7
23:53:17 **** Incremental Build of configuration Debug for project HW2_EX7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX7.exe main.o 
00:09:29 **** Rebuild of configuration Debug for project HW2_EX8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\main.c: In function 'main':
..\main.c:23:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'float *' [-Wformat=]
  scanf("%d %d", &num1, &num2);
          ^
..\main.c:23:13: warning: format '%d' expects argument of type 'int *', but argument 3 has type 'float *' [-Wformat=]
  scanf("%d %d", &num1, &num2);
             ^
gcc -o HW2_EX8.exe main.o 
Info: Nothing to build for HW2_EX8
00:10:11 **** Incremental Build of configuration Debug for project HW2_EX8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX8.exe main.o 
Info: Nothing to build for HW2_EX8
Info: Nothing to build for HW2_EX8
Info: Nothing to build for HW2_EX8
Info: Nothing to build for HW2_EX8
Info: Nothing to build for HW2_EX8
Info: Nothing to build for HW2_EX1
Info: Nothing to build for HW2_EX1
Info: Nothing to build for HW2_EX1
Info: Nothing to build for HW2_EX1
Info: Nothing to build for HW2_EX2
Info: Nothing to build for HW2_EX2
Info: Nothing to build for HW2_EX2
Info: Nothing to build for HW2_EX3
Info: Nothing to build for HW2_EX3
Info: Nothing to build for HW2_EX4
Info: Nothing to build for HW2_EX4
Info: Nothing to build for HW2_EX4
Info: Nothing to build for HW2_EX4
Info: Nothing to build for HW2_EX5
Info: Nothing to build for HW2_EX5
Info: Nothing to build for HW2_EX5
17:26:41 **** Incremental Build of configuration Debug for project HW2_EX6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX6.exe main.o 
Info: Nothing to build for HW2_EX6
Info: Nothing to build for HW2_EX6
Info: Nothing to build for HW2_EX6
Info: Nothing to build for HW2_EX6
Info: Nothing to build for HW2_EX6
Info: Nothing to build for HW2_EX6
Info: Nothing to build for HW2_EX6
Info: Nothing to build for HW2_EX6
17:33:34 **** Incremental Build of configuration Debug for project HW2_EX7 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:12:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
gcc -o HW2_EX7.exe main.o 
Info: Nothing to build for HW2_EX7
Info: Nothing to build for HW2_EX7
Info: Nothing to build for HW2_EX8
Info: Nothing to build for HW2_EX8
